--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -36,9 +36,9 @@ li {
   font-size: 20px;
 }
 
-footer p {
+/* footer p {
   font-size: 16px;
-}
+} */
 
 /* article header p {
   font-style: italic;
@@ -46,4 +46,18 @@ footer p {
 
 #author {
   font-style: italic;
+  font-size: 18px;
+}
+
+#copyright{
+  font-size: 16px;
+}
+
+.related-author {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.related {
+  list-style: none;
 }
