--- a/starter/03-CSS-Fundamentals/challange_style.css
+++ b/starter/03-CSS-Fundamentals/challange_style.css
@@ -1,10 +1,58 @@
 body {
-  border: solid 5px black;
   font-family: sans-serif;
+  line-height: 1.4;
 }
 
-h2 {
+.product {
+  border: solid 4px black;
+}
+
+.product-title {
   background-color: #f7f7f7;
+  font-size: 22px;
   text-align: center;
   text-transform: uppercase;
+}
+
+.price {
+  font-size: 24px;
+}
+
+.shipping {
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  color: #777;
+}
+
+.more-info:link,
+.more-info:visited {
+  color: black;
+}
+.more-info:hover,
+.more-info:active {
+  text-decoration: none;
+}
+
+.details-title {
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+.details-list {
+  list-style: square;
+}
+
+.add-cart {
+  background-color: #000;
+  border: none;
+  color: #fff;
+  font-size: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.add-cart:hover {
+  color: #000;
+  background-color: #fff;
 }
