--- a/starter/03-CSS-Fundamentals/challange_style.css
+++ b/starter/03-CSS-Fundamentals/challange_style.css
@@ -1,6 +1,16 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.4;
+}
+
+.container {
+  width: 825px;
+  margin: 50px auto;
 }
 
 .product {
@@ -12,6 +22,7 @@ body {
   font-size: 22px;
   text-align: center;
   text-transform: uppercase;
+  padding: 15px 0;
 }
 
 .price {
@@ -23,6 +34,7 @@ body {
   font-size: 12px;
   font-weight: bold;
   color: #777;
+  margin-bottom: 20px;
 }
 
 .more-info:link,
@@ -37,19 +49,29 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-top: 30px;
+  margin-bottom: 15px;
 }
 
 .details-list {
   list-style: square;
+  margin-left: 20px;
+}
+
+.details-list li {
+  margin-bottom: 10px;
 }
 
 .add-cart {
   background-color: #000;
   border: none;
+  border-top: solid 4px #000;
   color: #fff;
   font-size: 20px;
   text-transform: uppercase;
   cursor: pointer;
+  width: 100%;
+  padding: 15px;
 }
 
 .add-cart:hover {
