--- a/starter/03-CSS-Fundamentals/challange_style.css
+++ b/starter/03-CSS-Fundamentals/challange_style.css
@@ -11,6 +11,23 @@ body {
 .container {
   width: 825px;
   margin: 50px auto;
+
+  position: relative;
+}
+
+.sale {
+  content: "SALE";
+  background-color: #ec2f2f;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 7px 15px;
+  letter-spacing: 2px;
+
+  position: absolute;
+  top: -17px;
+  left: -38px;
 }
 
 .product {
@@ -40,10 +57,41 @@ body {
 .more-info:link,
 .more-info:visited {
   color: black;
+  display: inline-block;
+  margin-bottom: 30px;
 }
 .more-info:hover,
 .more-info:active {
   text-decoration: none;
+}
+
+.box {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  background-color: #000;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.color-blue {
+  background-color: #2f6ee2;
+}
+
+.color-red {
+  background-color: #ec2f2f;
+}
+
+.color-yellow {
+  background-color: #f0bf1e;
+}
+
+.color-green {
+  background-color: #90cc20;
+}
+
+.color-brown {
+  background-color: #885214;
 }
 
 .details-title {
