--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -3,10 +3,13 @@
   padding: 0;
 }
 
+/* PAGE SECTION */
 body {
   color: #444;
   font-family: sans-serif;
   border-top: solid 10px #1098ad;
+
+  position: relative;
 }
 
 .container {
@@ -14,6 +17,8 @@ body {
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
+
+  /* position: relative; */
 }
 
 .main-header {
@@ -23,11 +28,13 @@ body {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 80px;
+  /* height: 80px; */
 }
 
 nav {
   font-size: 18px;
+
+  text-align: center;
 }
 
 article {
@@ -36,6 +43,8 @@ article {
 
 .post-header {
   margin-bottom: 40px;
+
+  /* position: relative; */
 }
 
 aside {
@@ -92,6 +101,8 @@ ol {
 li {
   font-size: 20px;
   margin-bottom: 10px;
+
+  /* display: inline; */
 }
 
 li:last-child {
@@ -168,6 +179,65 @@ a:active {
 .post-image {
   width: 100%;
   height: auto;
+}
+
+nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+
+  display: block; */
+
+  margin-right: 30px;
+  margin-top: 10px;
+
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  /* top: 50px;
+  left: 50px; */
+
+  bottom: 50px;
+  right: 50px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+/* h3 + p::first-line {
+   color: red; 
+} */
+
+h2 {
+  /* background-color: orange; */
+  position: relative;
+}
+
+h2::after {
+  content: "TOP";
+  background-color: #ffe70e;
+  color: #444;
+  font-size: 16px;
+  font-weight: bold;
+
+  display: inline-block;
+  padding: 5px 10px;
+
+  position: absolute;
+  top: -10px;
+  right: -25px;
 }
 
 /* Resolving conflict */
