--- a/starter/04-CSS-Layouts/challange_style.css
+++ b/starter/04-CSS-Layouts/challange_style.css
@@ -14,12 +14,16 @@ body {
   width: 825px;
   margin: 50px auto;
   position: relative;
+
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 40px;
 }
 
-.container {
+/* .container {
   display: flex;
   gap: 40px;
-}
+} */
 
 .product-title {
   text-align: center;
@@ -27,6 +31,8 @@ body {
   text-transform: uppercase;
   background-color: #f7f7f7;
   padding: 15px;
+
+  grid-column: 1 / -1;
 }
 
 .product-info {
@@ -143,6 +149,8 @@ body {
   cursor: pointer;
   width: 100%;
   padding: 15px;
+
+  grid-column: 1 / -1;
 }
 
 .add-cart:hover {
