--- a/starter/08-Omnifood-Responsive/css/style.css
+++ b/starter/08-Omnifood-Responsive/css/style.css
@@ -1,31 +1,31 @@
-/**************************/
+/****************************************************/
 /* HEADER */
-/**************************/
-
+/****************************************************/
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #fdf2e9;
 
-  /* Because we want header to be sticky later */
+  /* Becuse we want header to be sticky later */
   height: 9.6rem;
   padding: 0 4.8rem;
+
+  position: relative;
 }
 
 .logo {
   height: 2.2rem;
 }
 
-/**************************/
-/* NAVIGATION */
-/**************************/
-
+/****************************************************/
+/* Navigation */
+/****************************************************/
 .main-nav-list {
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
@@ -45,6 +45,7 @@
 
 .main-nav-link.nav-cta:link,
 .main-nav-link.nav-cta:visited {
+  display: inline-block;
   padding: 1.2rem 2.4rem;
   border-radius: 9px;
   color: #fff;
@@ -56,10 +57,28 @@
   background-color: #cf711f;
 }
 
-/**************************/
-/* HERO SECTION */
-/**************************/
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background-color: none;
+  cursor: pointer;
 
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
+/****************************************************/
+/* HERO SECTION */
+/****************************************************/
 .section-hero {
   background-color: #fdf2e9;
   padding: 4.8rem 0 9.6rem 0;
@@ -71,13 +90,13 @@
   padding: 0 3.2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 9.6rem;
   align-items: center;
+  gap: 9.6rem;
 }
 
 .hero-description {
   font-size: 2rem;
-  line-height: 1.6;
+  line-height: 1.5;
   margin-bottom: 4.8rem;
 }
 
@@ -87,9 +106,9 @@
 
 .delivered-meals {
   display: flex;
-  align-items: center;
-  gap: 1.6rem;
   margin-top: 8rem;
+  gap: 1.6rem;
+  align-items: center;
 }
 
 .delivered-imgs {
@@ -105,7 +124,7 @@
 }
 
 .delivered-imgs img:last-child {
-  margin: 0;
+  margin-right: 0;
 }
 
 .delivered-text {
@@ -118,9 +137,9 @@
   font-weight: 700;
 }
 
-/**************************/
-/* FEATURED IN SECTION */
-/**************************/
+/****************************************************/
+/* FEATURED IN  SECTION */
+/****************************************************/
 
 .section-featured {
   padding: 4.8rem 0 3.2rem 0;
@@ -147,9 +166,9 @@
   opacity: 50%;
 }
 
-/**************************/
+/****************************************************/
 /* HOW IT WORKS SECTION */
-/**************************/
+/****************************************************/
 
 .section-how {
   padding: 9.6rem 0;
@@ -159,7 +178,6 @@
   font-size: 8.6rem;
   font-weight: 600;
   color: #ddd;
-  margin-bottom: 1.2rem;
 }
 
 .step-description {
@@ -169,7 +187,6 @@
 
 .step-img-box {
   position: relative;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -179,14 +196,15 @@
 .step-img-box::after {
   content: "";
   display: block;
-  border-radius: 50%;
   position: absolute;
+  border-radius: 50%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .step-img-box::before {
+  z-index: -2;
   width: 60%;
   /* height: 60%; */
 
@@ -194,24 +212,24 @@
   padding-bottom: 60%;
 
   background-color: #fdf2e9;
-  z-index: -2;
 }
 
 .step-img-box::after {
+  content: "";
+  z-index: -1;
+  transform: translate(-50%, -50%);
   width: 45%;
   padding-bottom: 45%;
   background-color: #fae5d3;
-  z-index: -1;
 }
 
 .step-img {
   width: 35%;
-  /* z-index: 10; */
 }
 
-/**************************/
+/****************************************************/
 /* MEALS SECTION */
-/**************************/
+/****************************************************/
 
 .section-meals {
   padding: 9.6rem 0;
@@ -252,9 +270,11 @@
 .tag--vegetarian {
   background-color: #51cf66;
 }
+
 .tag--vegan {
   background-color: #94d82d;
 }
+
 .tag--paleo {
   background-color: #ffd43b;
 }
@@ -262,7 +282,7 @@
 .meal-title {
   font-size: 2.4rem;
   color: #333;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 3.2rem;
 }
 
@@ -295,9 +315,9 @@
   font-size: 1.8rem;
 }
 
-/**************************/
+/****************************************************/
 /* TESTIMONIALS SECTION */
-/**************************/
+/****************************************************/
 
 .section-testimonials {
   background-color: #fdf2e9;
@@ -355,34 +375,33 @@
   transform: scale(1.1);
 }
 
-/**************************/
-/* MEALS SECTION */
-/**************************/
+/****************************************************/
+/* PRICING SECTION */
+/****************************************************/
 
 .section-pricing {
   padding: 9.6rem 0;
 }
 
-.princing-plan {
+.pricing-plan {
   border-radius: 11px;
-
   width: 75%;
 }
 
-.princing-plan--starter {
+.pricing-plan--starter {
   justify-self: end;
   border: 2px solid #fdf2e9;
   padding: 4.6rem;
 }
 
-.princing-plan--complete {
-  background-color: #fdf2e9;
+.pricing-plan--complete {
   padding: 4.8rem;
+  background-color: #fdf2e9;
   position: relative;
   overflow: hidden;
 }
 
-.princing-plan--complete::after {
+.pricing-plan--complete::after {
   content: "Best value";
   position: absolute;
   top: 6%;
@@ -450,33 +469,32 @@
   padding: 1.6rem;
   border-radius: 50%;
 }
-
 .feature-title {
   font-size: 2.4rem;
   color: #333;
   font-weight: 700;
   margin-bottom: 1.6rem;
 }
-
 .feature-text {
   font-size: 1.8rem;
   line-height: 1.8;
 }
 
-/**************************/
-/* CTA SECTION */
-/**************************/
+/****************************************************/
+/* CALL-TO-ACTION SECTION */
+/****************************************************/
 
 .section-cta {
-  /* top / right / bottom / left */
+  /* top / right / bottom / left*/
   /* padding: 9.6rem 0 12.8rem 0; */
 
-  /* top / horizontal / left */
+  /* top / horizontal / bottom */
   padding: 4.8rem 0 12.8rem;
 }
 
 .cta {
   display: grid;
+  /* 2/3 = 66.6% + 1/3 = 33.3% */
   grid-template-columns: 2fr 1fr;
   /* background-color: #e67e22; */
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
@@ -491,16 +509,15 @@
   color: #45260a;
 }
 
-.cta .heading-secondary {
-  /* color: #45260a; */
-  color: inherit;
-  margin-bottom: 3.2rem;
-}
-
 .cta-text {
   font-size: 1.8rem;
   line-height: 1.8;
   margin-bottom: 4.8rem;
+}
+
+.cta .heading-secondary {
+  color: #45260a;
+  margin-bottom: 3.2rem;
 }
 
 .cta-img-box {
@@ -527,7 +544,6 @@
   font-weight: 500;
   margin-bottom: 1.2rem;
 }
-
 .cta-form input,
 .cta-form select {
   width: 100%;
@@ -550,9 +566,9 @@
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
 
-/**************************/
+/****************************************************/
 /* FOOTER */
-/**************************/
+/****************************************************/
 
 .footer {
   padding: 12.8rem 0;
@@ -588,6 +604,7 @@
   font-size: 1.4rem;
   line-height: 1.6;
   color: #767676;
+
   margin-top: auto;
 }
 
