--- a/starter/09-Omnifood-Optimizations/css/general.css
+++ b/starter/09-Omnifood-Optimizations/css/general.css
@@ -1,50 +1,48 @@
-/*
+/* 
 --- 01 TYPOGRAPHY SYSTEM
 
 - Font sizes (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
-- Font weights
+- Font weights:
 Default: 400
 Medium: 500
 Semi-bold: 600
 Bold: 700
 
-- Line heights
-Default: 1
+- Line heights:
+Default:1
 Small: 1.05
 Medium: 1.2
 Paragraph default: 1.6
 Large: 1.8
 
-- Letter spacing
+-Letter spacing
 -0.5px
 0.75px
+
 
 --- 02 COLORS
 
 - Primary: #e67e22
-- Tints:
+- Tints: 
 #fdf2e9
 #fae5d3
 #eb984e
-
 - Shades: 
 #cf711f
 #45260a
-
 - Accents:
-- Greys
-
+- Greys:
 #888
 #767676 (lightest grey allowed on #fff)
 #6f6f6f (lightest grey allowed on #fdf2e9)
 #555
 #333
 
---- 05 SHADOWS
 
-0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+--- 05 SHADOWS
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075)
 
 --- 06 BORDER-RADIUS
 
@@ -55,17 +53,18 @@ Medium: 11px
 
 - Spacing system (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+
 */
 
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 html {
   /* font-size: 10px; */
-
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
@@ -78,13 +77,14 @@ body {
   font-weight: 400;
   color: #555;
 
-  /* Only works if there is nothing absolutely positioned in relation to body */
+  /* Only works if there is nothing 
+  absolutely positioned in relation to body */
   overflow-x: hidden;
 }
 
-/**************************/
-/* GENRAL REUSABLE COMPONENTS */
-/**************************/
+/****************************************************/
+/* GENERAL REUSABLE COMPONENTS */
+/****************************************************/
 
 .container {
   /* 1140px */
@@ -121,7 +121,8 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
-/* .grid--5-cols {
+/* 
+.grid--5-cols {
   grid-template-columns: repeat(5, 1fr);
 } */
 
@@ -178,13 +179,12 @@ body {
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
 
-  /* Only necessary for .btn */
+  /* Only necessary for .btn  */
   border: none;
   cursor: pointer;
   font-family: inherit;
 
   /* Put transition on original "state" */
-  /* transition: background-color 0.3s; */
   transition: all 0.3s;
 }
 
@@ -224,7 +224,7 @@ body {
 
 .btn--form:hover {
   background-color: #fff;
-  color: #555;
+  color: #333;
 }
 
 .link:link,
@@ -259,19 +259,20 @@ body {
 }
 
 .list-icon {
-  width: 3rem;
   height: 3rem;
+  width: 3rem;
   color: #e67e22;
 }
 
 *:focus {
   outline: none;
   /* outline: 4px dotted #e67e22; */
-  /* outline-offset: 8px; */
+  /* outline-offset: 6px; */
   box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER/SETTINGS CLASSES */
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
