--- a/starter/09-Omnifood-Optimizations/css/style.css
+++ b/starter/09-Omnifood-Optimizations/css/style.css
@@ -1,16 +1,16 @@
-/**************************/
+/****************************************************/
 /* HEADER */
-/**************************/
-
+/****************************************************/
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #fdf2e9;
 
-  /* Because we want header to be sticky later */
+  /* Becuse we want header to be sticky later */
   height: 9.6rem;
   padding: 0 4.8rem;
+
   position: relative;
 }
 
@@ -18,10 +18,9 @@
   height: 2.2rem;
 }
 
-/**************************/
-/* NAVIGATION */
-/**************************/
-
+/****************************************************/
+/* Navigation */
+/****************************************************/
 .main-nav-list {
   list-style: none;
   display: flex;
@@ -46,6 +45,7 @@
 
 .main-nav-link.nav-cta:link,
 .main-nav-link.nav-cta:visited {
+  display: inline-block;
   padding: 1.2rem 2.4rem;
   border-radius: 9px;
   color: #fff;
@@ -60,7 +60,7 @@
 /* MOBILE */
 .btn-mobile-nav {
   border: none;
-  background: none;
+  background-color: none;
   cursor: pointer;
 
   display: none;
@@ -76,10 +76,9 @@
   display: none;
 }
 
-/**************************/
+/****************************************************/
 /* HERO SECTION */
-/**************************/
-
+/****************************************************/
 .section-hero {
   background-color: #fdf2e9;
   padding: 4.8rem 0 9.6rem 0;
@@ -91,13 +90,13 @@
   padding: 0 3.2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 9.6rem;
   align-items: center;
+  gap: 9.6rem;
 }
 
 .hero-description {
   font-size: 2rem;
-  line-height: 1.6;
+  line-height: 1.5;
   margin-bottom: 4.8rem;
 }
 
@@ -107,9 +106,9 @@
 
 .delivered-meals {
   display: flex;
-  align-items: center;
-  gap: 1.6rem;
   margin-top: 8rem;
+  gap: 1.6rem;
+  align-items: center;
 }
 
 .delivered-imgs {
@@ -125,7 +124,7 @@
 }
 
 .delivered-imgs img:last-child {
-  margin: 0;
+  margin-right: 0;
 }
 
 .delivered-text {
@@ -138,9 +137,9 @@
   font-weight: 700;
 }
 
-/**************************/
-/* FEATURED IN SECTION */
-/**************************/
+/****************************************************/
+/* FEATURED IN  SECTION */
+/****************************************************/
 
 .section-featured {
   padding: 4.8rem 0 3.2rem 0;
@@ -167,9 +166,9 @@
   opacity: 50%;
 }
 
-/**************************/
+/****************************************************/
 /* HOW IT WORKS SECTION */
-/**************************/
+/****************************************************/
 
 .section-how {
   padding: 9.6rem 0;
@@ -179,7 +178,6 @@
   font-size: 8.6rem;
   font-weight: 600;
   color: #ddd;
-  margin-bottom: 1.2rem;
 }
 
 .step-description {
@@ -189,7 +187,6 @@
 
 .step-img-box {
   position: relative;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -199,14 +196,15 @@
 .step-img-box::after {
   content: "";
   display: block;
-  border-radius: 50%;
   position: absolute;
+  border-radius: 50%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .step-img-box::before {
+  z-index: -2;
   width: 60%;
   /* height: 60%; */
 
@@ -214,24 +212,24 @@
   padding-bottom: 60%;
 
   background-color: #fdf2e9;
-  z-index: -2;
 }
 
 .step-img-box::after {
+  content: "";
+  z-index: -1;
+  transform: translate(-50%, -50%);
   width: 45%;
   padding-bottom: 45%;
   background-color: #fae5d3;
-  z-index: -1;
 }
 
 .step-img {
   width: 35%;
-  /* z-index: 10; */
 }
 
-/**************************/
+/****************************************************/
 /* MEALS SECTION */
-/**************************/
+/****************************************************/
 
 .section-meals {
   padding: 9.6rem 0;
@@ -272,9 +270,11 @@
 .tag--vegetarian {
   background-color: #51cf66;
 }
+
 .tag--vegan {
   background-color: #94d82d;
 }
+
 .tag--paleo {
   background-color: #ffd43b;
 }
@@ -282,7 +282,7 @@
 .meal-title {
   font-size: 2.4rem;
   color: #333;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 3.2rem;
 }
 
@@ -315,9 +315,9 @@
   font-size: 1.8rem;
 }
 
-/**************************/
+/****************************************************/
 /* TESTIMONIALS SECTION */
-/**************************/
+/****************************************************/
 
 .section-testimonials {
   background-color: #fdf2e9;
@@ -375,9 +375,9 @@
   transform: scale(1.1);
 }
 
-/**************************/
-/* MEALS SECTION */
-/**************************/
+/****************************************************/
+/* PRICING SECTION */
+/****************************************************/
 
 .section-pricing {
   padding: 9.6rem 0;
@@ -385,7 +385,6 @@
 
 .pricing-plan {
   border-radius: 11px;
-
   width: 75%;
 }
 
@@ -396,8 +395,8 @@
 }
 
 .pricing-plan--complete {
-  background-color: #fdf2e9;
   padding: 4.8rem;
+  background-color: #fdf2e9;
   position: relative;
   overflow: hidden;
 }
@@ -470,28 +469,26 @@
   padding: 1.6rem;
   border-radius: 50%;
 }
-
 .feature-title {
   font-size: 2.4rem;
   color: #333;
   font-weight: 700;
   margin-bottom: 1.6rem;
 }
-
 .feature-text {
   font-size: 1.8rem;
   line-height: 1.8;
 }
 
-/**************************/
-/* CTA SECTION */
-/**************************/
+/****************************************************/
+/* CALL-TO-ACTION SECTION */
+/****************************************************/
 
 .section-cta {
-  /* top / right / bottom / left */
+  /* top / right / bottom / left*/
   /* padding: 9.6rem 0 12.8rem 0; */
 
-  /* top / horizontal / left */
+  /* top / horizontal / bottom */
   padding: 4.8rem 0 12.8rem;
 }
 
@@ -512,16 +509,15 @@
   color: #45260a;
 }
 
-.cta .heading-secondary {
-  /* color: #45260a; */
-  color: inherit;
-  margin-bottom: 3.2rem;
-}
-
 .cta-text {
   font-size: 1.8rem;
   line-height: 1.8;
   margin-bottom: 4.8rem;
+}
+
+.cta .heading-secondary {
+  color: #45260a;
+  margin-bottom: 3.2rem;
 }
 
 .cta-img-box {
@@ -548,7 +544,6 @@
   font-weight: 500;
   margin-bottom: 1.2rem;
 }
-
 .cta-form input,
 .cta-form select {
   width: 100%;
@@ -571,9 +566,9 @@
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
 
-/**************************/
+/****************************************************/
 /* FOOTER */
-/**************************/
+/****************************************************/
 
 .footer {
   padding: 12.8rem 0;
@@ -609,6 +604,7 @@
   font-size: 1.4rem;
   line-height: 1.6;
   color: #767676;
+
   margin-top: auto;
 }
 
